--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,28 @@
 ``pkginfo`` Changelog
 =====================
 
+1.9.2 (2022-11-29)
+------------------
+
+- Drop "universal" wheel support (should be redundant with
+  `python_requires >= 3.6`, but just in case.  LP #1998258.
+
+1.9.1 (2022-11-29)
+------------------
+
+- Restore a deprecated alias for the '_must_decode' helper function, moved
+  from 'pkginfo._compat.must_decode' to 'pkginfo.distribution._must_decode'
+  in 1.90.
+
+- Repair unit tests broken by dropping Python 2.7 classifier.
+
+1.9.0 (2022-11-29)
+------------------
+
+- Drop support for Python 2.7.
+
+- Switch to use 'pytest' vs. 'nose', which doesn't support Python > 3.9.
+
 1.8.3 (2022-06-08)
 ------------------
 
