--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,18 @@
 ``pkginfo`` Changelog
 =====================
 
+1.9.6 (2023-01-08)
+------------------
+
+- Fix various typos in docs / docstrings.  LP #2002232.
+
+1.9.5 (2023-01-06)
+------------------
+
+- Add stricter typing checks, matching those used in 'twine'.
+
+- Fix typing errors / gaps reported from 'twine' CI failure.  LP #2002104.
+
 1.9.4 (2023-01-05)
 ------------------
 
@@ -9,13 +21,13 @@
 1.9.3 (2023-01-03)
 ------------------
 
-- Added stub files for Python typing support;  verify using `mypy`. LP #1876591.
+- Added stub files for Python typing support;  verify using 'mypy'. LP #1876591.
 
 1.9.2 (2022-11-29)
 ------------------
 
 - Drop "universal" wheel support (should be redundant with
-  `python_requires >= 3.6`, but just in case.  LP #1998258.
+  'python_requires >= 3.6', but just in case).  LP #1998258.
 
 1.9.1 (2022-11-29)
 ------------------
@@ -271,7 +283,7 @@
 - Add tests that the "environment markers" spelled out in the approved
   PEP 345 are captured.
 
-- Add ``Project-URL`` for ``1.2`` PKG-INFO metdata (defined in the accepted
+- Add ``Project-URL`` for ``1.2`` PKG-INFO metadata (defined in the accepted
   version of PEP 345).
 
 
