--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,18 @@
 ``pkginfo`` Changelog
 =====================
 
+1.10.0 (2024-03-03)
+-------------------
+
+- Add support for Python 3.11 and 3.12.
+
+- Drop support for Python 3.6.
+
+- Declare explicit testing dependency on 'wheel'.
+
+- Add support for Metadata 2.3.
+
+
 1.9.6 (2023-01-08)
 ------------------
 
